--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==1.11
 django-bootstrap4==0.0.7
 django-heroku==0.3.1
 django-registration==2.4.1
+gunicorn==19.9.0
 Pillow==5.3.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
